--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,8 @@ if(PKG_CONFIG_FOUND)
 	endif()
 endif()
 
+# Dynamic library
+# ---------------
 # Step 2: Build a dynamic library, and specify the source file
 add_library(message-shared SHARED "")
 target_sources(message-shared
@@ -35,22 +37,82 @@ target_link_libraries(message-shared
 set_target_properties(message-shared
 	PROPERTIES
 		POSITION_INDEPENDENT_CODE 1
+		CXX_VISIBILITY_PRESET hidden
+		VISIBILITY_INLINES_HIDDEN 1
 		SOVERSION ${PROJECT_VERSION_MAJOR}
 		OUTPUT_NAME "message"
 		DEBUG_POSTFIX "_d"
-		PUBLIC_HEADER "Message.h"
+		PUBLIC_HEADER "Message.h;${CMAKE_BINARY_DIR}/${INSTALL_INCLUDEDIR}/messageExport.h"
 		MACOSX_RPATH ON
 		WINDOWS_EXPORT_ALL_SYMBOLS ON
 		)
 
-# Step 5: Finally, add executable file for 'Hello, World', and linked it with library.
+# Step 5: Include 'GenerateExportHeader.cmake' module and calling 'generate_export_header'
+# funcion, this action will generating 'messageExport.h' header.
+include(GenerateExportHeader)
+generate_export_header(message-shared
+	BASE_NAME "message"
+	EXPORT_MACRO_NAME "message_EXPORT"
+	EXPORT_FILE_NAME "${CMAKE_BINARY_DIR}/${INSTALL_INCLUDEDIR}/messageExport.h"
+	DEPRECATED_MACRO_NAME "message_DEPRECATED"
+	NO_EXPORT_MACRO_NAME "message_NO_EXPORT"
+	STATIC_DEFINE "message_STATIC_DEFINE"
+	NO_DEPRECATED_MACRO_NAME "message_NO_DEPRECATED"
+	DEFINE_NO_DEPRECATED
+	)
+
+# Step 6: When we will change visibility of symbols, we should include the header 
+# that has been exported.
+target_include_directories(message-shared
+	PUBLIC
+		${CMAKE_BINARY_DIR}/${INSTALL_INCLUDEDIR}
+	)
+
+# Static library
+# --------------
+# Step 7: Add an static library
+add_library(message-static STATIC "")
+target_sources(message-static
+	PRIVATE
+		${CMAKE_CURRENT_LIST_DIR}/Message.cpp
+	)
+
+# Step 8: Because we add 'message_STATIC_DEFINE' compiling macro defination, 
+# so make sure our symbols can been exposed suitable.
+target_compile_definitions(message-static
+	PUBLIC
+		message_STATIC_DEFINE
+		$<$<BOOL:${UUID_FOUND}>:HAVE_UUID>
+	)
+
+target_include_directories(message-static
+	PUBLIC
+		${CMAKE_BINARY_DIR}/${INSTALL_INCLUDEDIR}
+	)
+
+target_link_libraries(message-static
+	PUBLIC 
+		$<$<BOOL:${UUID_FOUND}>:PkgConfig::UUID>
+	)
+
+# Step 9: Config 'message-static' target's attributes.
+set_target_properties(message-static
+	PROPERTIES
+		POSITION_INDEPENDENT_CODE 1
+		ARCHIVE_OUTPUT_NAME "message"
+		DEBUG_POSTFIX "_sd"
+		RELEASE_POSTFIX "_s"
+		PUBLIC_HEADER "Message.h;${CMAKE_BINARY_DIR}/${INSTALL_INCLUDEDIR}/messageExport.h"
+	)
+
+# Step 10: Finally, add executable file for 'Hello, World', and linked it with library.
 add_executable(hello-world_wDSO hello-world.cpp)
 target_link_libraries(hello-world_wDSO
 	PUBLIC 
 		message-shared
 	)
 
-# Step 6: Config message_RPATH, this will config suitable RPATH for GNU/Linux and macOS.
+# Step 11: Config message_RPATH, this will config suitable RPATH for GNU/Linux and macOS.
 file(RELATIVE_PATH _rel ${CMAKE_INSTALL_PREFIX}/${INSTALL_BINDIR} ${CMAKE_INSTALL_PREFIX})
 if(APPLE)
 	set(_rpath "@loader_path/${_rel}")
@@ -59,7 +121,7 @@ else()
 endif()
 file(TO_NATIVE_PATH "${_rpath}/${INSTALL_LIBDIR}" message_RPATH)
 
-# Step 7: Now we can using it to configuring executable target hello-world_wDSO's RPATH,
+# Step 12: Now we can using it to configuring executable target hello-world_wDSO's RPATH,
 # and we can also set additional attributes.
 set_target_properties(hello-world_wDSO
 	PROPERTIES
@@ -70,11 +132,21 @@ set_target_properties(hello-world_wDSO
 		INSTALL_RPATH_USE_LINK_PATH ON
 		)
 
-# Step 8: Finally, we can install libraries, headers and executable files.
+# Step 13: Also, we define another executable target 'hello-world_wAR', 
+# it point to the static library.
+add_executable(hello-world_wAR hello-world.cpp)
+target_link_libraries(hello-world_wAR 
+	PUBLIC
+		message-static
+	)
+
+# Step 14: Finally, we can install libraries, headers and executable files.
 install(
 	TARGETS
 		message-shared
+		message-static
 		hello-world_wDSO
+		hello-world_wAR
 	ARCHIVE
 		DESTINATION ${INSTALL_LIBDIR}
 		COMPONENT lib
