output targets by nevergiu in 2021/11/8 at 23:25

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,22 @@ endif()
 # ---------------
 # Step 2: Build a dynamic library, and specify the source file
 add_library(message-shared SHARED "")
+
+# Step 5: Include 'GenerateExportHeader.cmake' module and calling 'generate_export_header'
+# funcion, this action will generating 'messageExport.h' header.
+include(GenerateExportHeader)
+generate_export_header(message-shared
+	BASE_NAME "message"
+	EXPORT_MACRO_NAME "message_EXPORT"
+	EXPORT_FILE_NAME "${CMAKE_BINARY_DIR}/${INSTALL_INCLUDEDIR}/messageExport.h"
+	DEPRECATED_MACRO_NAME "message_DEPRECATED"
+	NO_EXPORT_MACRO_NAME "message_NO_EXPORT"
+	STATIC_DEFINE "message_STATIC_DEFINE"
+	NO_DEPRECATED_MACRO_NAME "message_NO_DEPRECATED"
+	DEFINE_NO_DEPRECATED
+	)
+
+
 target_sources(message-shared
 	PRIVATE
 		${CMAKE_CURRENT_LIST_DIR}/Message.cpp
@@ -26,6 +42,16 @@ target_sources(message-shared
 target_compile_definitions(message-shared
 	PUBLIC
 		$<$<BOOL:${UUID_FOUND}>:HAVE_UUID>
+	INTERFACE
+		$<INSTALL_INTERFACE:USING_message>
+	)
+
+# Step 6: When we will change visibility of symbols, we should include the header 
+# that has been exported.
+target_include_directories(message-shared
+	PUBLIC
+		$<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/${INSTALL_INCLUDEDIR}>
+		$<INSTALL_INTERFACE:${INSTALL_INCLUDEDIR}>
 	)
 
 target_link_libraries(message-shared
@@ -47,27 +73,6 @@ set_target_properties(message-shared
 		WINDOWS_EXPORT_ALL_SYMBOLS ON
 		)
 
-# Step 5: Include 'GenerateExportHeader.cmake' module and calling 'generate_export_header'
-# funcion, this action will generating 'messageExport.h' header.
-include(GenerateExportHeader)
-generate_export_header(message-shared
-	BASE_NAME "message"
-	EXPORT_MACRO_NAME "message_EXPORT"
-	EXPORT_FILE_NAME "${CMAKE_BINARY_DIR}/${INSTALL_INCLUDEDIR}/messageExport.h"
-	DEPRECATED_MACRO_NAME "message_DEPRECATED"
-	NO_EXPORT_MACRO_NAME "message_NO_EXPORT"
-	STATIC_DEFINE "message_STATIC_DEFINE"
-	NO_DEPRECATED_MACRO_NAME "message_NO_DEPRECATED"
-	DEFINE_NO_DEPRECATED
-	)
-
-# Step 6: When we will change visibility of symbols, we should include the header 
-# that has been exported.
-target_include_directories(message-shared
-	PUBLIC
-		${CMAKE_BINARY_DIR}/${INSTALL_INCLUDEDIR}
-	)
-
 # Static library
 # --------------
 # Step 7: Add an static library
@@ -83,11 +88,14 @@ target_compile_definitions(message-static
 	PUBLIC
 		message_STATIC_DEFINE
 		$<$<BOOL:${UUID_FOUND}>:HAVE_UUID>
+	INTERFACE
+		$<INSTALL_INTERFACE:USING_message>
 	)
 
 target_include_directories(message-static
 	PUBLIC
-		${CMAKE_BINARY_DIR}/${INSTALL_INCLUDEDIR}
+		$<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/${INSTALL_INCLUDEDIR}>
+		$<INSTALL_INTERFACE:${INSTALL_INCLUDEDIR}>
 	)
 
 target_link_libraries(message-static
@@ -147,6 +155,8 @@ install(
 		message-static
 		hello-world_wDSO
 		hello-world_wAR
+	EXPORT
+		messageTargets
 	ARCHIVE
 		DESTINATION ${INSTALL_LIBDIR}
 		COMPONENT lib
@@ -159,4 +169,45 @@ install(
 	PUBLIC_HEADER
 		DESTINATION ${INSTALL_INCLUDEDIR}/message
 		COMPONENT dev
+	)
+
+# Step 8: Auto creational exported target file 'messageTargets.cmake',
+# needs to explicitly specify its installation rules. It's target is 
+# 'INSTALL_CMAKEDIR'.
+install(
+	EXPORT
+		messageTargets
+	NAMESPACE
+		"message::"
+	DESTINATION
+		${INSTALL_CMAKEDIR}
+	COMPONENT
+		dev
+	)
+
+# Step 9: Needs creating currectly CMake config file. This will make sure
+# that downstream project can find the message library exported targets.
+include(CMakePackageConfigHelpers)
+
+# Create an version-message contained file for our library by CMake.
+write_basic_package_version_file(
+	${CMAKE_CURRENT_BINARY_DIR}/messageConfigVersion.cmake
+	VERSION ${PROJECT_VERSION}
+	COMPATIBILITY SameMajorVersion
+	)
+
+# Step 10: Usage 'configure_package_config_file' function to create CMake config file.
+configure_package_config_file(
+	${PROJECT_SOURCE_DIR}/cmake/messageConfig.cmake.in
+	${CMAKE_CURRENT_BINARY_DIR}/messageConfig.cmake
+	INSTALL_DESTINATION ${INSTALL_CMAKEDIR}
+	)
+
+# Step 11: Finally, sets install rules for the two auto-created configure files.
+install(
+	FILES
+		${CMAKE_CURRENT_BINARY_DIR}/messageConfig.cmake
+		${CMAKE_CURRENT_BINARY_DIR}/messageConfigVersion.cmake
+	DESTINATION
+		${INSTALL_CMAKEDIR}
 	)
