--- a/super_install_build/src/CMakeLists.txt
+++ b/super_install_build/src/CMakeLists.txt
@@ -12,8 +12,26 @@ if(PKG_CONFIG_FOUND)
 	endif()
 endif()
 
+# Dynamic library
+# ---------------
 # Step 2: Build a dynamic library, and specify the source file
 add_library(message-shared SHARED "")
+
+# Step 5: Include 'GenerateExportHeader.cmake' module and calling 'generate_export_header'
+# funcion, this action will generating 'messageExport.h' header.
+include(GenerateExportHeader)
+generate_export_header(message-shared
+	BASE_NAME "message"
+	EXPORT_MACRO_NAME "message_EXPORT"
+	EXPORT_FILE_NAME "${CMAKE_BINARY_DIR}/${INSTALL_INCLUDEDIR}/messageExport.h"
+	DEPRECATED_MACRO_NAME "message_DEPRECATED"
+	NO_EXPORT_MACRO_NAME "message_NO_EXPORT"
+	STATIC_DEFINE "message_STATIC_DEFINE"
+	NO_DEPRECATED_MACRO_NAME "message_NO_DEPRECATED"
+	DEFINE_NO_DEPRECATED
+	)
+
+
 target_sources(message-shared
 	PRIVATE
 		${CMAKE_CURRENT_LIST_DIR}/Message.cpp
@@ -24,6 +42,16 @@ target_sources(message-shared
 target_compile_definitions(message-shared
 	PUBLIC
 		$<$<BOOL:${UUID_FOUND}>:HAVE_UUID>
+	INTERFACE
+		$<INSTALL_INTERFACE:USING_message>
+	)
+
+# Step 6: When we will change visibility of symbols, we should include the header 
+# that has been exported.
+target_include_directories(message-shared
+	PUBLIC
+		$<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/${INSTALL_INCLUDEDIR}>
+		$<INSTALL_INTERFACE:${INSTALL_INCLUDEDIR}>
 	)
 
 target_link_libraries(message-shared
@@ -35,22 +63,64 @@ target_link_libraries(message-shared
 set_target_properties(message-shared
 	PROPERTIES
 		POSITION_INDEPENDENT_CODE 1
+		CXX_VISIBILITY_PRESET hidden
+		VISIBILITY_INLINES_HIDDEN 1
 		SOVERSION ${PROJECT_VERSION_MAJOR}
 		OUTPUT_NAME "message"
 		DEBUG_POSTFIX "_d"
-		PUBLIC_HEADER "Message.h"
+		PUBLIC_HEADER "Message.h;${CMAKE_BINARY_DIR}/${INSTALL_INCLUDEDIR}/messageExport.h"
 		MACOSX_RPATH ON
 		WINDOWS_EXPORT_ALL_SYMBOLS ON
 		)
 
-# Step 5: Finally, add executable file for 'Hello, World', and linked it with library.
+# Static library
+# --------------
+# Step 7: Add an static library
+add_library(message-static STATIC "")
+target_sources(message-static
+	PRIVATE
+		${CMAKE_CURRENT_LIST_DIR}/Message.cpp
+	)
+
+# Step 8: Because we add 'message_STATIC_DEFINE' compiling macro defination, 
+# so make sure our symbols can been exposed suitable.
+target_compile_definitions(message-static
+	PUBLIC
+		message_STATIC_DEFINE
+		$<$<BOOL:${UUID_FOUND}>:HAVE_UUID>
+	INTERFACE
+		$<INSTALL_INTERFACE:USING_message>
+	)
+
+target_include_directories(message-static
+	PUBLIC
+		$<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/${INSTALL_INCLUDEDIR}>
+		$<INSTALL_INTERFACE:${INSTALL_INCLUDEDIR}>
+	)
+
+target_link_libraries(message-static
+	PUBLIC 
+		$<$<BOOL:${UUID_FOUND}>:PkgConfig::UUID>
+	)
+
+# Step 9: Config 'message-static' target's attributes.
+set_target_properties(message-static
+	PROPERTIES
+		POSITION_INDEPENDENT_CODE 1
+		ARCHIVE_OUTPUT_NAME "message"
+		DEBUG_POSTFIX "_sd"
+		RELEASE_POSTFIX "_s"
+		PUBLIC_HEADER "Message.h;${CMAKE_BINARY_DIR}/${INSTALL_INCLUDEDIR}/messageExport.h"
+	)
+
+# Step 10: Finally, add executable file for 'Hello, World', and linked it with library.
 add_executable(hello-world_wDSO hello-world.cpp)
 target_link_libraries(hello-world_wDSO
 	PUBLIC 
 		message-shared
 	)
 
-# Step 6: Config message_RPATH, this will config suitable RPATH for GNU/Linux and macOS.
+# Step 11: Config message_RPATH, this will config suitable RPATH for GNU/Linux and macOS.
 file(RELATIVE_PATH _rel ${CMAKE_INSTALL_PREFIX}/${INSTALL_BINDIR} ${CMAKE_INSTALL_PREFIX})
 if(APPLE)
 	set(_rpath "@loader_path/${_rel}")
@@ -59,7 +129,7 @@ else()
 endif()
 file(TO_NATIVE_PATH "${_rpath}/${INSTALL_LIBDIR}" message_RPATH)
 
-# Step 7: Now we can using it to configuring executable target hello-world_wDSO's RPATH,
+# Step 12: Now we can using it to configuring executable target hello-world_wDSO's RPATH,
 # and we can also set additional attributes.
 set_target_properties(hello-world_wDSO
 	PROPERTIES
@@ -70,11 +140,23 @@ set_target_properties(hello-world_wDSO
 		INSTALL_RPATH_USE_LINK_PATH ON
 		)
 
-# Step 8: Finally, we can install libraries, headers and executable files.
+# Step 13: Also, we define another executable target 'hello-world_wAR', 
+# it point to the static library.
+add_executable(hello-world_wAR hello-world.cpp)
+target_link_libraries(hello-world_wAR 
+	PUBLIC
+		message-static
+	)
+
+# Step 14: Finally, we can install libraries, headers and executable files.
 install(
 	TARGETS
 		message-shared
+		message-static
 		hello-world_wDSO
+		hello-world_wAR
+	EXPORT
+		messageTargets
 	ARCHIVE
 		DESTINATION ${INSTALL_LIBDIR}
 		COMPONENT lib
@@ -87,4 +169,45 @@ install(
 	PUBLIC_HEADER
 		DESTINATION ${INSTALL_INCLUDEDIR}/message
 		COMPONENT dev
+	)
+
+# Step 8: Auto creational exported target file 'messageTargets.cmake',
+# needs to explicitly specify its installation rules. It's target is 
+# 'INSTALL_CMAKEDIR'.
+install(
+	EXPORT
+		messageTargets
+	NAMESPACE
+		"message::"
+	DESTINATION
+		${INSTALL_CMAKEDIR}
+	COMPONENT
+		dev
+	)
+
+# Step 9: Needs creating currectly CMake config file. This will make sure
+# that downstream project can find the message library exported targets.
+include(CMakePackageConfigHelpers)
+
+# Create an version-message contained file for our library by CMake.
+write_basic_package_version_file(
+	${CMAKE_CURRENT_BINARY_DIR}/messageConfigVersion.cmake
+	VERSION ${PROJECT_VERSION}
+	COMPATIBILITY SameMajorVersion
+	)
+
+# Step 10: Usage 'configure_package_config_file' function to create CMake config file.
+configure_package_config_file(
+	${PROJECT_SOURCE_DIR}/cmake/messageConfig.cmake.in
+	${CMAKE_CURRENT_BINARY_DIR}/messageConfig.cmake
+	INSTALL_DESTINATION ${INSTALL_CMAKEDIR}
+	)
+
+# Step 11: Finally, sets install rules for the two auto-created configure files.
+install(
+	FILES
+		${CMAKE_CURRENT_BINARY_DIR}/messageConfig.cmake
+		${CMAKE_CURRENT_BINARY_DIR}/messageConfigVersion.cmake
+	DESTINATION
+		${INSTALL_CMAKEDIR}
 	)
