some summary has been changed by nevergiu in 2021/11/11 at 21:41

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,4 +68,5 @@ enable_testing()
 
 add_subdirectory(tests)
 
+# Step 8: CMake CPack is Required when we will packaging our project
 include(CMakeCPack.cmake)
