Prepare to change Ubuntu 20.04 LTS system, So this is for backup core files by nevergiu in 2021/12/31 at 22:11

--- a/super_install_build/cmake/messageConfig.cmake.in
+++ b/super_install_build/cmake/messageConfig.cmake.in
@@ -15,9 +15,9 @@ check_required_components(
 
 # Step 4: Check if 'PkgConfig::UUID' is exist. If not exist, 
 # we will research UUID library(only valid under non-WIN system).
-if(NOT WIN32)
-	if(NOT TARGET PkgConfig::UUID)
-		find_package(PkgConfig REQUIRED QUIET)
-		pkg_search_module(UUID REQUIRED uuid IMPORTED_TARGET)
-	endif()
-endif()
+# if(NOT WIN32)
+#         if(NOT TARGET PkgConfig::UUID)
+#                 find_package(PkgConfig REQUIRED QUIET)
+#                 pkg_search_module(UUID REQUIRED uuid IMPORTED_TARGET)
+#         endif()
+# endif()
